<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tedu.zab.activity.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_rb_live_list"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/main_rb_live_list" />

        <RadioButton
            android:id="@+id/main_rb_live_chat"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/main_rb_live_chat" />

        <RadioButton
            android:id="@+id/main_rb_live_set"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/main_rb_live_set" />
    </RadioGroup>

</LinearLayout>